# mcpstore

./: README.md  README_en.md  README_zh.md
api/: __init__.py  api.py  api_agent.py  api_app.py  api_cache.py  api_concurrency.py  api_decorators.py  api_dependencies.py  api_exceptions.py  api_models.py  api_pack.py  api_service_utils.py  api_store.py  app.py  pyproject.toml  runner.py
src/mcpstore/: __init__.py
src/mcpstore/adapters/: __init__.py
src/mcpstore/cli/: main.py
src/mcpstore/core/domain/: reconnection_scheduler.py
src/mcpstore/core/models/: common.py
src/mcpstore/core/orchestrator/: tool_execution.py
src/mcpstore/core/registry/: state_backend.py
src/mcpstore/core/registry/core_registry/: __init__.py  errors.py  main_registry.py
src/mcpstore/core/store/: composed_store.py  data_space_manager.py
src/mcpstore/mcp/client/: tasks.py
src/mcpstore/mcp/server/: dependencies.py  lifespan.py
src/mcpstore/mcp/server/providers/local_provider/decorators/: resources.py
src/mcpstore/mcp/server/tasks/: requests.py
src/mcpstore/mcp/utilities/: components.py  inspect.py
src/mcpstore/mcp/utilities/mcp_server_config/v1/sources/: filesystem.py
